--- a/webapp/.eslintrc.json
+++ b/webapp/.eslintrc.json
@@ -1,6 +1,8 @@
 {
 	"extends": [
 		"eslint:recommended",
+		"next/babel",
+    "next/core-web-vitals",
 		"plugin:import/errors",
 		"plugin:react/recommended",
 		"plugin:jsx-a11y/recommended",
