--- a/webapp/package.json
+++ b/webapp/package.json
@@ -9,12 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.3.7",
+    "@emotion/react": "^11.6.0",
+    "@emotion/styled": "^11.6.0",
     "@rainbow-me/rainbowkit": "^0.7.1",
     "dotenv": "^16.0.3",
     "ethers": "^5.7.1",
+    "framer-motion": "^4.1.17",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.6.0",
     "wagmi": "^0.6.8"
   },
   "devDependencies": {
